--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,10 +1,10 @@
 <h1> These are our Recipes</h1>
 
-<div class= 'panel panel-default' style="max-width: 500px">
+<div class='panel panel-default' style="max-width: 500px">
   <div class="panel-heading">
-            <h3 class="panel-title"> {{ recipe.title }} </h3>
+    <h3 class="panel-title"> {{ recipe.title }} </h3>
   </div>
-  <div class= "panel-body"> 
+  <div class="panel-body">
     <p>{{ recipe.description }} </p>
-  </div>
+    /div>
   </div>
