--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,18 +1,15 @@
 <h1> These are our Recipes</h1>
 
-<div *ngFor="let recipe of recipes" class='panel panel-default' style="max-width: 500px">
-
+<div *ngFor="let recipe of recipes" class='recipe panel panel-default' style="max-width: 500px">
   <div class="panel-heading">
     <h3 class="panel-title"> {{ recipe.title }} </h3>
   </div>
 
   <div class="panel-body">
-    <p>{{ recipe.description }} </p>
+    <div class="cover-photo-holder" style="float: right;">
 
-    <div style="float:right">
-      <img src=" {{ recipe.cover_photo ? recipe.cover_photo : '/assets/empty.png'}} " style="width: 150px; height: 150px" />
+      <img src=" {{ recipe.cover_photo ? recipe.cover_photo : '/assets/index.png'}} " style="float:right" />
     </div>
-
+    <p>{{ recipe.description }} </p>
   </div>
-
 </div>
